[tool.poetry]
name = "telegram-bot-proxy"
version = "0.1.0"
description = ""
authors = ["darkkeks <v.boben@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
telethon = "^1.37.0"
cryptg = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
